test/functional/Sema/ambiguous_variable.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

func consume(@unused value: Int) {}

func validFirst() {
    let x = 42;
    let x = "Hello";
    // CHECK: 11:13: error: Ambiguous reference to variable 'x'
    consume(x);
}

func validLast() {
    let x = "Hello";
    let x = 42;
    // CHECK: 18:13: error: Ambiguous reference to variable 'x'
    consume(x);
}
